(v2) Scene editor: improving undo framework (keep selection, refresh outline).